buildscript {
    ext {
        springBootVersion = '2.7.18'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

jar {
    enabled = false
}

java {
    sourceCompatibility = 17
    targetCompatibility = 17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
    implementation('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml')
    implementation('org.apache.httpcomponents:httpclient')
    implementation('com.google.guava:guava:21.0')
    implementation('org.springframework.data:spring-data-commons')

    compileOnly('org.projectlombok:lombok:1.18.30')
    runtimeOnly('org.webjars:webjars-locator:0.34')
    runtimeOnly('org.webjars:bootstrap:3.3.7-1')
    runtimeOnly('org.webjars:jquery:3.1.1-1')
    runtimeOnly('org.springframework.boot:spring-boot-devtools')

    testImplementation('junit:junit')
    testImplementation('org.assertj:assertj-core:3.4.1')
    testImplementation('org.mockito:mockito-core')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testCompileOnly('org.projectlombok:lombok:1.18.30')

    annotationProcessor('org.projectlombok:lombok:1.18.30')
    testAnnotationProcessor('org.projectlombok:lombok:1.18.30')
}

bootRun {
    systemProperties System.properties
}
